# lindera-ko-dic-builder

./: .gitignore  CHANGES.md  Cargo.toml  Makefile  README.md
.github/workflows/: periodic.yml  regression.yml  release.yml
src/: lib.rs  main.rs
