[package]
name = "lindera-ko-dic-builder"
version = "0.1.2"
authors = [
    "Paul Masurel <paul.masurel@gmail.com>",
    "Minoru Osuka <minoru.osuka@gmail.com>"
    ]
edition = "2018"
description = "A Korean morphological dictionary builder for ko-dic."
documentation = "https://docs.rs/lindera-ko-dic-builder"
homepage = "https://github.com/lindera-morphology/lindera-ko-dic-builder"
repository = "https://github.com/lindera-morphology/lindera-ko-dic-builder"
readme = "README.md"
keywords = ["korean", "morphological", "dictionary", "builder", "ko-dic"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
bincode = "1.2.1"
byteorder = "1.3.4"
clap = "2.33.0"
csv = "1.1.3"
encoding = "0.2.33"
glob = "0.3.0"
lindera-core = "0.4.0"
lindera-fst = "0.1.0"

[[bin]]
name = "lindera-ko-dic"
path = "src/main.rs"
